--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -32,6 +32,7 @@
                     android:outAnimation="@android:anim/slide_out_right">
 
                     <ImageView
+                        android:id="@+id/imageViewDetail"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
@@ -70,6 +71,7 @@
 
             <!-- Title and rating section -->
             <TextView
+                android:id="@+id/textViewTitleDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
@@ -86,6 +88,7 @@
                 android:paddingEnd="16dp">
 
                 <TextView
+                    android:id="@+id/textViewRatingDetail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4.6"
