--- a/app/src/main/res/layout/detail_page.xml
+++ b/app/src/main/res/layout/detail_page.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".Detail.GidDetailActivity">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
     <!-- ScrollView to enable scrolling for the entire content -->
     <ScrollView
         android:layout_width="match_parent"
@@ -407,9 +411,11 @@
 
         </LinearLayout>
     </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <!-- Floating Pricing and Booking section -->
     <LinearLayout
+        android:id="@+id/floatingBooking"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -439,5 +445,6 @@
             android:text="Booking"
             android:textColor="@android:color/white" />
     </LinearLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
