--- a/app/src/main/res/layout/studio_pencarian.xml
+++ b/app/src/main/res/layout/studio_pencarian.xml
@@ -16,35 +16,35 @@
         tools:context=".History.HistoryActivity">
 
         <!-- Header with Back Button and Title -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="42dp">
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="42dp">-->
 
-            <!-- Button Back -->
-            <FrameLayout
-                android:id="@+id/back_button_container"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/button_back">
+<!--            &lt;!&ndash; Button Back &ndash;&gt;-->
+<!--            <FrameLayout-->
+<!--                android:id="@+id/back_button_container"-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:layout_alignParentStart="true"-->
+<!--                android:layout_centerVertical="true"-->
+<!--                android:layout_marginStart="16dp"-->
+<!--                android:background="@drawable/button_back">-->
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/baseline_arrow_back_24"/>
-            </FrameLayout>
+<!--                <ImageView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:background="@drawable/baseline_arrow_back_24"/>-->
+<!--            </FrameLayout>-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="Riwayat Pemesanan"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-        </RelativeLayout>
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_centerInParent="true"-->
+<!--                android:text="Riwayat Pemesanan"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="20sp" />-->
+<!--        </RelativeLayout>-->
 
         <!-- Space between header and buttons -->
         <View
