--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -76,6 +76,7 @@
                 <!--android:fontFamily="@font/poppins_regular"-->
 
                 <LinearLayout
+                    android:id="@+id/searchLocation"
                     android:layout_width="match_parent"
                     android:layout_height="58dp"
                     android:layout_alignParentBottom="true"
@@ -95,11 +96,9 @@
                         android:src="@drawable/ic_search"
                         android:contentDescription="search_icon" />
 
-                    <EditText
-                        android:id="@+id/searchLocation"
-                        android:layout_width="0dp"
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:hint="Cari Studio Dance"
                         android:textSize="16sp"
                         android:inputType="text"
