--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -13,14 +13,14 @@
         android:title="Fafourite" />
 
     <item
+        android:id="@+id/bottom_search"
+        android:icon="@drawable/baseline_search_24"
+        android:title="Search" />
+
+    <item
         android:id="@+id/bottom_history"
         android:icon="@drawable/history"
         android:title="History" />
-
-    <item
-        android:id="@+id/bottom_chat"
-        android:icon="@drawable/chat"
-        android:title="Chat" />
 
     <item
         android:id="@+id/botton_account"
