--- a/app/src/main/res/layout/dialog_reset_password.xml
+++ b/app/src/main/res/layout/dialog_reset_password.xml
@@ -1,65 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="260dp"
-    android:padding="20dp"
-    android:background="@drawable/dialog_background"
-    android:gravity="center">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@android:color/transparent"
+    android:layout_marginHorizontal="48dp"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Atur Ulang Kata Sandi"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/rl_container"
+        app:layout_constraintEnd_toEndOf="@id/rl_container"
+        app:layout_constraintTop_toTopOf="@id/rl_container"
+        app:layout_constraintBottom_toBottomOf="@id/rl_container"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="-4dp"
+        android:importantForAccessibility="no"
+        android:background="@drawable/bg_edit_text_shadow" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email verifikasi akan dikirimkan ke"
-        android:gravity="center"
-        android:textSize="14sp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"/>
+    <RelativeLayout
+        android:id="@+id/rl_container"
+        android:layout_width="match_parent"
+        android:padding="18dp"
+        android:layout_marginHorizontal="2dp"
+        android:background="@drawable/bg_edit_text_rounded_white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="meong@gmail.com"
-        android:gravity="center"
-        android:textSize="14sp"
-        android:layout_marginBottom="20dp"
-        android:textStyle="bold"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginLeft="90sp">
-
-        <Button
-            android:id="@+id/button_continue"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Lanjutkan"
-            android:textSize="12sp"
-            android:textColor="@color/orange"
-            android:background="@android:color/transparent"/>
+            android:layout_marginTop="16dp"
+            android:text="@string/title_reset_password"
+            android:fontFamily="@font/poppins_bold"
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
 
-        <Button
-            android:id="@+id/button_cancel"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tv_description"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Batal"
-            android:textSize="12sp"
-            android:textColor="@color/black"
+            android:layout_below="@id/tv_title"
+            android:layout_marginTop="24dp"
+            android:text="@string/text_reset_password"
+            android:textAlignment="center"
+            android:fontFamily="@font/poppins"
+            android:textSize="14sp"
+            android:textColor="@color/black" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            />
-    </LinearLayout>
-</LinearLayout>
+            android:elevation="0dp"
+            android:layout_below="@id/tv_description"
+            android:text="@string/action_cancel"
+            android:textColor="@color/black"
+            android:textAllCaps="false"
+            android:fontFamily="@font/poppins"
+            android:textSize="12sp"
+            android:layout_alignParentEnd="true" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_confirm"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:elevation="0dp"
+            android:layout_toStartOf="@id/btn_cancel"
+            android:text="@string/action_next"
+            android:textColor="@color/orange"
+            android:textAllCaps="false"
+            android:layout_below="@id/tv_description"
+            android:fontFamily="@font/poppins"
+            android:textSize="12sp" />
+    </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
