--- a/app/src/main/res/layout/item_card_besar.xml
+++ b/app/src/main/res/layout/item_card_besar.xml
@@ -94,8 +94,15 @@
                 android:id="@+id/ratingText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="4.5/5"
+                android:layout_marginStart="5dp"
+                android:text="4.5"
+                android:textColor="@color/black"
+                android:textSize="13sp"/>
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" / 5"
                 android:textColor="@color/black"
                 android:textSize="13sp"/>
         </LinearLayout>
