--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -4,133 +4,104 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-    <LinearLayout
+    <!-- Buttons Container (Fixed at the top) -->
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:context=".History.HistoryActivity">
+        android:layout_gravity="top">
 
-        <!-- Header with Back Button and Title -->
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="42dp">-->
-
-<!--            &lt;!&ndash; Button Back &ndash;&gt;-->
-<!--            <FrameLayout-->
-<!--                android:id="@+id/back_button_container"-->
-<!--                android:layout_width="25dp"-->
-<!--                android:layout_height="25dp"-->
-<!--                android:layout_alignParentStart="true"-->
-<!--                android:layout_centerVertical="true"-->
-<!--                android:layout_marginStart="16dp"-->
-<!--                android:background="@drawable/button_back">-->
-
-<!--                <ImageView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:background="@drawable/baseline_arrow_back_24"/>-->
-<!--            </FrameLayout>-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_centerInParent="true"-->
-<!--                android:text="Riwayat Pemesanan"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:textSize="20dp" />-->
-<!--        </RelativeLayout>-->
-
-        <!-- Space between header and buttons -->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="43dp" />
-
-        <!-- Buttons Container -->
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <!-- Button SELESAI -->
-                <FrameLayout
-                    android:layout_width="148dp"
-                    android:layout_height="55.18dp">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="53dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/shadow_background"
-                        android:padding="10dp"
-                        android:layout_marginLeft="2dp"/>
-
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/shape_button_selector"
-                        android:padding="10dp"
-                        android:textColor="@drawable/button_text_color"
-                        android:textSize="18sp"
-                        android:gravity="center"
-                        android:text="SELESAI" />
-                </FrameLayout>
-
-                <View
-                    android:layout_width="48.77dp"
-                    android:layout_height="0dp" />
-
-                <!-- Button MENUNGGU -->
-                <FrameLayout
-                    android:layout_width="148dp"
-                    android:layout_height="55.18dp">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="55dp"
-                        android:layout_gravity="center"
-                        android:background="@drawable/shadow_background"
-                        android:padding="10dp"
-                        android:layout_marginLeft="2dp"/>
-
-                    <Button
-                        android:id="@+id/btnMenunggu"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/shape_button_selector_menunggu"
-                        android:padding="10dp"
-                        android:textColor="@drawable/button_text_color_menunggu"
-                        android:textSize="18sp"
-                        android:gravity="center"
-                        android:text="MENUNGGU" />
-                </FrameLayout>
-            </LinearLayout>
-        </FrameLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="51.82dp" />
-
-        <!-- RecyclerView for Main Boxes -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_studios"
+        <LinearLayout
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" />
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <!-- Button SELESAI -->
+            <FrameLayout
+                android:layout_width="148dp"
+                android:layout_height="55.18dp">
 
-</ScrollView>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="53dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/shadow_background"
+                    android:padding="10dp"
+                    android:layout_marginLeft="2dp"/>
+
+                <Button
+                    android:id="@+id/btnSelesai"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_button_selector"
+                    android:padding="10dp"
+                    android:textColor="@drawable/button_text_color"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:text="SELESAI" />
+            </FrameLayout>
+
+            <View
+                android:layout_width="48.77dp"
+                android:layout_height="0dp" />
+
+            <!-- Button MENUNGGU -->
+            <FrameLayout
+                android:layout_width="148dp"
+                android:layout_height="55.18dp">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/shadow_background"
+                    android:padding="10dp"
+                    android:layout_marginLeft="2dp"/>
+
+                <Button
+                    android:id="@+id/btnMenunggu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_button_selector_menunggu"
+                    android:padding="10dp"
+                    android:textColor="@drawable/button_text_color_menunggu"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:text="MENUNGGU" />
+            </FrameLayout>
+        </LinearLayout>
+    </FrameLayout>
+
+    <!-- ScrollView for content -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="99dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- RecyclerView for Main Boxes -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_studios"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="51.82dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <!-- Bottom Navigation View -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
@@ -146,4 +117,5 @@
         app:itemRippleColor="@color/default_color"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/bottom_menu" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
