--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -120,16 +120,13 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="58dp"
-            app:layout_constraintTop_toTopOf="@id/btn_login"
-            app:layout_constraintStart_toStartOf="@id/btn_login"
-            app:layout_constraintEnd_toEndOf="@id/btn_login"
-            app:layout_constraintBottom_toBottomOf="@id/btn_login"
+
             android:layout_marginTop="6dp"
             android:layout_marginStart="6dp"
             android:importantForAccessibility="no"
             android:background="@drawable/bg_button_shadow" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="58dp"
