--- a/app/src/main/res/layout/activity_selected_hours.xml
+++ b/app/src/main/res/layout/activity_selected_hours.xml
@@ -164,20 +164,20 @@
 
                             <Button
                                 android:id="@+id/buttonDeleteSelected"
-                                android:layout_width="0dp"
+                                android:layout_width="156dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:text="hapus"
-                                android:background="@drawable/button"/>
+                                android:background="@drawable/shape_button_selector"
+                                android:textColor="@drawable/button_text_color"/>
 
                             <Button
                                 android:id="@+id/buttonAdd"
-                                android:layout_width="0dp"
+                                android:layout_width="156dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
                                 android:layout_marginStart="16dp"
                                 android:text="Tambah"
-                                android:background="@drawable/button"/>
+                                android:background="@drawable/shape_button_selector"
+                                android:textColor="@drawable/button_text_color"/>
                         </LinearLayout>
 
 
@@ -272,8 +272,9 @@
                             android:layout_height="46dp"
                             android:layout_marginBottom="11dp"
                             android:entries="@array/payment_methods"
-
+                            android:background="@drawable/spinner_background"
                             android:spinnerMode="dropdown" />
+
 
                     </RelativeLayout>
 
@@ -287,56 +288,70 @@
                         />
 
                     <!-- Total Biaya -->
-                    <LinearLayout
-                        android:layout_marginBottom="40dp"
-                        android:background="@drawable/spinner_background"
-                        android:padding="10dp"
+                    <RelativeLayout
+                        android:layout_marginTop="39dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="40dp"
+                        android:background="@drawable/pembayaran_bg"
+                        android:gravity="center_vertical"
                         android:orientation="vertical"
-                        android:gravity="center_vertical">
+                        android:padding="10dp">
 
                         <TextView
                             android:textSize="15dp"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Total biaya"
-                            android:textAppearance="?attr/textAppearanceBody1"/>
+                            android:textAppearance="?attr/textAppearanceBody1" />
 
                         <LinearLayout
-                            android:gravity="center"
-                            android:orientation="horizontal"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                            <TextView
-                                android:textSize="12dp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Rp "
-                                android:textAppearance="?attr/textAppearanceBody1"/>
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="horizontal">
 
-                            <TextView
-                                android:textSize="12dp"
-                                android:id="@+id/textViewTotalPrice"
+                            <LinearLayout
+                                android:layout_marginTop="12dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="170000"
-                                android:textAppearance="?attr/textAppearanceBody1"/>
+                                >
+                                <TextView
+                                    android:textSize="12dp"
+                                    android:textColor="@color/white"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Rp "
+                                    android:textAppearance="?attr/textAppearanceBody1" />
+
+                                <TextView
+                                    android:textSize="15dp"
+                                    android:id="@+id/textViewTotalPrice"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:text="185.000"
+                                    android:textColor="@color/white" />
+
+                            </LinearLayout>
                             <View
                                 android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"/>
+                                android:layout_height="50dp"
+                                android:layout_weight="1" />
+
                             <Button
                                 android:id="@+id/buttonPay"
-                                android:layout_width="wrap_content"
+                                android:layout_width="113dp"
                                 android:layout_height="wrap_content"
-                                android:text="Bayar"
-                                android:background="@drawable/button"
-                                android:layout_gravity="end"/>
+                                android:layout_gravity="end"
+                                android:textColor="@drawable/button_text_color"
+                                android:background="@drawable/shape_button_selector"
+                                android:text="Booking" />
                         </LinearLayout>
 
 
-                    </LinearLayout>
+                    </RelativeLayout>
 
                 </LinearLayout>
 
