--- a/app/src/main/res/drawable/spinner_background.xml
+++ b/app/src/main/res/drawable/spinner_background.xml
@@ -1,9 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-
-    <corners android:radius="8dp" /> <!-- Sudut melengkung -->
-    <stroke
-        android:width="1dp"
-        android:color="#000000" /> <!-- Warna garis tepi -->
-</shape>
+<!-- res/drawable/spinner_background.xml -->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <!-- Background color -->
+        <shape android:shape="rectangle">
+            <solid android:color="#FFFFFF" />
+            <stroke android:width="1dp" android:color="#CCCCCC"/>
+        </shape>
+    </item>
+    <item android:right="16dp" android:gravity="end|center_vertical">
+        <bitmap android:src="@drawable/gopay" android:gravity="center"/>
+    </item>
+</layer-list>
