--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -225,7 +225,7 @@
                 android:importantForAccessibility="no"
                 android:background="@drawable/bg_button_shadow" />
 
-            <com.google.android.material.button.MaterialButton
+            <Button
                 android:id="@+id/btn_save"
                 android:layout_width="match_parent"
                 android:layout_height="58dp"
@@ -234,7 +234,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:fontFamily="@font/poppins_bold"
+                android:background="@drawable/rounded_25"
                 android:text="@string/action_save"
+                android:stateListAnimator="@animator/lift_on_touch"
                 android:insetTop="0dp"
                 android:includeFontPadding="false"
                 android:insetBottom="0dp"
