--- a/app/src/main/res/layout/dialog_reset_password.xml
+++ b/app/src/main/res/layout/dialog_reset_password.xml
@@ -52,7 +52,7 @@
             android:textSize="14sp"
             android:textColor="@color/black" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_marginTop="16dp"
@@ -67,7 +67,7 @@
             android:textSize="12sp"
             android:layout_alignParentEnd="true" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btn_confirm"
             android:layout_width="wrap_content"
             android:layout_marginTop="16dp"
