--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -63,13 +63,10 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="58dp"
-            app:layout_constraintTop_toTopOf="@id/et_password"
-            app:layout_constraintStart_toStartOf="@id/et_password"
-            app:layout_constraintEnd_toEndOf="@id/et_password"
-            app:layout_constraintBottom_toBottomOf="@id/et_password"
             android:layout_marginTop="4dp"
             android:importantForAccessibility="no"
-            android:background="@drawable/bg_edit_text_shadow" />
+            android:background="@drawable/bg_edit_text_shadow"
+            tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/et_current_password"
@@ -222,7 +219,7 @@
             android:importantForAccessibility="no"
             android:background="@drawable/bg_button_shadow" />
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="58dp"
@@ -232,9 +229,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/action_save"
+            android:background="@drawable/rounded_25"
             android:insetTop="0dp"
             android:insetBottom="0dp"
-            app:cornerRadius="26dp"
+            app:cornerRadius="25dp"
+            android:stateListAnimator="@animator/lift_on_touch"
             app:backgroundTint="#331D0B"
             android:textAllCaps="false"
             android:textColor="#FF9035"
