DONE tinggal kecil kecil

--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -177,8 +177,12 @@
 
 
             </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="100dp"></View>
         </LinearLayout>
     </LinearLayout>
+
 
 
     </ScrollView>
