--- a/app/src/main/res/layout/activity_choose_hour.xml
+++ b/app/src/main/res/layout/activity_choose_hour.xml
@@ -89,6 +89,7 @@
 
                 >
                 <TextView
+                    android:id="@+id/studioNameTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Studio B"
@@ -98,12 +99,12 @@
 
                     ></TextView>
                 <TextView
+                    android:id="@+id/studioAddressTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="3 Jadwal tersedia"
                     android:fontFamily="@font/poppins_regular"
                     android:textColor="@color/black">
-
                 </TextView>
             </LinearLayout>
 
