--- a/app/src/main/res/layout/item_card_besar.xml
+++ b/app/src/main/res/layout/item_card_besar.xml
@@ -1,111 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="260.3dp"
+    android:layout_marginLeft="22dp"
+    android:layout_marginRight="22dp"
+    android:background="@drawable/shape_container"
     android:orientation="vertical"
-    android:layout_margin="10dp"
-    android:background="@drawable/orange_bg_rounded_25"
-    android:stateListAnimator="@animator/lift_on_touch"
     >
 
-
-    <ImageView
-        android:id="@+id/imageView"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:background="@drawable/rounded_25"
-        android:clipToOutline="true"
-        android:src="@drawable/studio"
-        app:layout_constraintBottom_toTopOf="@+id/studioInfoLayout"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="55dp"
+            android:layout_height="54dp"
+            android:background="@drawable/baseline_circle_24"
+            android:layout_gravity="top|end"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"/>
+
+        <Button
+            android:id="@+id/favorite_button_change"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/favorite_button_change"
+            android:layout_gravity="top|end"
+            android:layout_marginTop="17dp"
+            android:layout_marginRight="17dp"/>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/rounded_image"
+            android:clipToOutline="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/studio_dance_jazz" />
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="top|end"
+            android:layout_margin="10dp"/>
+    </FrameLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp" />
 
     <LinearLayout
-        android:id="@+id/studioInfoLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/studioName"
+            android:layout_width="0dp"
+            android:layout_height="24.38dp"
+            android:layout_marginLeft="23.32dp"
+            android:layout_weight="1"
+            android:text="BP Studio Dance - Jazz Dance"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="30.32dp"
+            android:layout_height="20.14dp"
+            android:layout_marginRight="8.3dp"
+            android:src="@drawable/baseline_location_on_24"/>
+
+        <TextView
+            android:id="@+id/locationText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp">
+            android:layout_marginRight="25.81dp"
+            android:text="Bogor"
+            android:textColor="@color/black"
+            android:textSize="13dp" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/studioName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_weight="1"
-                android:text="BP Studio Dance - Jazz Dance"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/locationIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:src="@drawable/lokasi"/>
+        <View
+            android:layout_width="23.32dp"
+            android:layout_height="0dp" />
 
-            <TextView
-                android:id="@+id/locationText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Bogor"
-                android:textColor="@color/black"
-                android:textSize="13sp"/>
-        </LinearLayout>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="20.14dp"
+            android:layout_weight="1"
+            android:text="Rp."
+            android:textColor="@color/black"
+            android:textSize="13dp" />
+        <TextView
+            android:id="@+id/priceText"
+            android:layout_width="180dp"
+            android:layout_height="20.14dp"
+            android:layout_weight="1"
+            android:text="250.000 / jam"
+            android:textColor="@color/black"
+            android:textSize="13dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="23.32dp"
+            android:layout_height="20.14dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/bintang"/>
+
+        <View
+            android:layout_width="2.12dp"
+            android:layout_height="0dp" />
+
+        <TextView
+            android:id="@+id/ratingText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp">
+            android:layout_marginStart="5dp"
+            android:text="4.5"
+            android:textColor="@color/black"
+            android:textSize="13sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" / 5"
+            android:textColor="@color/black"
+            android:layout_marginRight="45dp"
+            android:textSize="13sp"/>
 
-            <TextView
-                android:id="@+id/priceText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Rp. 250.000 / jam"
-                android:textColor="@color/black"
-                android:textSize="13sp"/>
-
-            <ImageView
-                android:id="@+id/ratingIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:src="@drawable/bintang"/>
-
-            <TextView
-                android:id="@+id/ratingText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:text="4.5"
-                android:textColor="@color/black"
-                android:textSize="13sp"/>
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" / 5"
-                android:textColor="@color/black"
-                android:textSize="13sp"/>
-        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
